Adds the classes concerned the Joke endpoint